--- a/LibriVox/StoryBoard/LoginRegister.storyboard
+++ b/LibriVox/StoryBoard/LoginRegister.storyboard
@@ -262,6 +262,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Dw-Ix-sAI">
+                                <rect key="frame" x="104" y="570" width="75" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <connections>
+                                    <action selector="testing:" destination="2aK-Rf-jgc" eventType="touchUpInside" id="r0G-k3-7Yt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fLR-Vq-huQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -366,9 +375,16 @@
                                             <action selector="setPicture:" destination="UmR-to-MC6" eventType="touchUpInside" id="yJT-Es-xeF"/>
                                         </connections>
                                     </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LRz-FS-ozH" customClass="CircularImageView" customModule="LibriVox" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="155"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
+                                    <constraint firstItem="LRz-FS-ozH" firstAttribute="leading" secondItem="ZYE-e5-6mp" secondAttribute="leading" id="04L-vO-O3T"/>
+                                    <constraint firstItem="LRz-FS-ozH" firstAttribute="top" secondItem="ZYE-e5-6mp" secondAttribute="top" id="FXA-jM-OwV"/>
+                                    <constraint firstAttribute="bottom" secondItem="LRz-FS-ozH" secondAttribute="bottom" id="Zcp-jK-vUu"/>
+                                    <constraint firstAttribute="trailing" secondItem="LRz-FS-ozH" secondAttribute="trailing" id="qJD-mo-Eeb"/>
                                     <constraint firstAttribute="width" constant="361" id="x3h-TV-qbK"/>
                                     <constraint firstAttribute="height" constant="155" id="xuC-6T-ome"/>
                                 </constraints>
@@ -412,19 +428,11 @@
                                     <action selector="registerButton:" destination="2aK-Rf-jgc" eventType="touchUpInside" id="J0f-fq-EcN"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="28187" highlightedImage="28187" translatesAutoresizingMaskIntoConstraints="NO" id="LRz-FS-ozH">
-                                <rect key="frame" x="16" y="733" width="361" height="85"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="85" id="gtR-Z9-pmq"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="p1m-xf-PBs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="p1m-xf-PBs" firstAttribute="bottom" secondItem="LRz-FS-ozH" secondAttribute="bottom" id="2tp-Ac-Ts5"/>
                             <constraint firstItem="p1m-xf-PBs" firstAttribute="trailing" secondItem="ztF-x3-VDx" secondAttribute="trailing" constant="64" id="Auv-B3-9nB"/>
-                            <constraint firstItem="p1m-xf-PBs" firstAttribute="trailing" secondItem="LRz-FS-ozH" secondAttribute="trailing" constant="16" id="Eju-N0-zmy"/>
                             <constraint firstItem="hqo-pv-MpI" firstAttribute="leading" secondItem="p1m-xf-PBs" secondAttribute="leading" constant="32" id="Fdd-fZ-UCd"/>
                             <constraint firstItem="p1m-xf-PBs" firstAttribute="trailing" secondItem="ZYE-e5-6mp" secondAttribute="trailing" constant="16" id="LL6-P3-onz"/>
                             <constraint firstItem="ztF-x3-VDx" firstAttribute="top" secondItem="v0G-Qb-0Dm" secondAttribute="bottom" constant="16" id="LSf-cc-D8A"/>
@@ -443,13 +451,13 @@
                             <constraint firstItem="p1m-xf-PBs" firstAttribute="trailing" secondItem="hqo-pv-MpI" secondAttribute="trailing" constant="32" id="q2R-BN-seO"/>
                             <constraint firstItem="ZYE-e5-6mp" firstAttribute="top" secondItem="L0Z-gO-rhJ" secondAttribute="bottom" constant="8" id="s3m-bE-2D8"/>
                             <constraint firstItem="c6s-u1-UYl" firstAttribute="top" secondItem="Tcx-tW-Ij5" secondAttribute="bottom" constant="8" id="sQ2-Qa-Sut"/>
-                            <constraint firstItem="LRz-FS-ozH" firstAttribute="leading" secondItem="p1m-xf-PBs" secondAttribute="leading" constant="16" id="v6x-RB-OCd"/>
                             <constraint firstItem="L0Z-gO-rhJ" firstAttribute="leading" secondItem="p1m-xf-PBs" secondAttribute="leading" constant="64" id="vaR-RZ-zIH"/>
                             <constraint firstItem="Tcx-tW-Ij5" firstAttribute="leading" secondItem="p1m-xf-PBs" secondAttribute="leading" constant="16" id="yz0-DW-2fV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" style="editor" id="9Qw-b7-jQV"/>
                     <connections>
+                        <outlet property="buttonPicture" destination="xKP-io-Fmx" id="Y8A-Gx-sZI"/>
                         <outlet property="descText" destination="c6s-u1-UYl" id="fWZ-4X-aJ4"/>
                         <outlet property="imageView" destination="LRz-FS-ozH" id="GvW-3M-cLd"/>
                     </connections>
@@ -478,7 +486,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="28187" width="305" height="475"/>
         <image name="apple.logo" catalog="system" width="105" height="128"/>
         <image name="logo" width="400" height="400"/>
         <image name="search" width="16" height="16"/>
