--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -25,7 +25,7 @@
         <!--LibraryVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="LibraryVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LibraryId" id="Y6W-OH-hqX" customClass="LibraryVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -94,7 +94,7 @@
                                 </connections>
                             </segmentedControl>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Get-br-Ail">
-                                <rect key="frame" x="16" y="301" width="361" height="517"/>
+                                <rect key="frame" x="16" y="301" width="361" height="468"/>
                                 <connections>
                                     <segue destination="g2d-10-gio" kind="embed" id="Wyd-vd-C8F"/>
                                 </connections>
@@ -118,13 +118,17 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="et3-JV-DZ3" secondAttribute="trailing" constant="16" id="rHr-Ze-gs6"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="books.vertical" catalog="system" selectedImage="books.vertical.fill" id="jSh-7z-Ye9">
+                        <color key="badgeColor" name="Main Blue Tone"/>
+                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="BjT-40-eDO"/>
                     <connections>
                         <outlet property="segmentedControl" destination="HCo-hA-CH5" id="ban-qv-5ti"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="58" y="-2"/>
+            <point key="canvasLocation" x="1910.6870229007632" y="-2.1126760563380285"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="dMt-I3-UCt">
@@ -217,14 +221,14 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LXh-jl-8Rs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="755" y="-2"/>
+            <point key="canvasLocation" x="2608.3969465648852" y="-2.1126760563380285"/>
         </scene>
         <!--Container PagesVC-->
         <scene sceneID="qX1-6T-lGc">
             <objects>
                 <viewController modalTransitionStyle="flipHorizontal" id="g2d-10-gio" customClass="ContainerPagesVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5U0-rY-qsA">
-                        <rect key="frame" x="0.0" y="0.0" width="361" height="517"/>
+                        <rect key="frame" x="0.0" y="0.0" width="361" height="468"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="w1W-yw-xQr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -232,7 +236,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YzC-Hw-01X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="57" y="619"/>
+            <point key="canvasLocation" x="1911" y="586"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="e1T-7l-2CY">
@@ -336,7 +340,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yih-dq-swd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1439" y="-2"/>
+            <point key="canvasLocation" x="3292.3664122137402" y="-2.1126760563380285"/>
         </scene>
         <!--Collection View Controller-->
         <scene sceneID="B85-OH-DR4">
@@ -413,10 +417,30 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PQ5-xH-o9G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2112" y="-2"/>
+            <point key="canvasLocation" x="3964.1221374045799" y="-2.1126760563380285"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="cOm-4q-5RW">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="gcO-94-2mX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SyZ-JI-cKM">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="Lighter Blue Tone"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="gtb-ai-iNx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C79-LT-bbW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="983.96946564885491" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
+        <image name="books.vertical" catalog="system" width="128" height="107"/>
+        <image name="books.vertical.fill" catalog="system" width="128" height="110"/>
         <image name="play" width="512" height="512"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <namedColor name="AccentColor">
